updated for uploader into pvc at /mnt

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,11 @@
   </div>
 </head>
 {% endblock %}
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #377ba8">
+  <span class="navbar-brand" style="color: black"><b>Matthew's Travels</b></span>
+  <a class="navbar-brand btn btn-outline-light" style="color: white" href="/upload">Upload Updated List</a>
+</nav>
 
   <!-- body -->
 
