self hosting plotly and world_100m.json

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         var plotlyConfig = { responsive: true };
 
         // follows: div-id, graph var, layout var - use {} if none to pass
-        Plotly.plot('chart',graphs,{}); 
+        Plotly.newPlot('chart',graphs,{}); 
         
      </script>
 
