updated chart to log

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
           <div class="stat-card">
             <i class="fas fa-plane stat-icon"></i>
             <h3 id="total-trips">0</h3>
-            <p>Total Trips</p>
+            <p>Total Trips (Larger Because of Repeat Visits)</p>
           </div>
         </div>
         <div class="col-md-4">
